spacing fix 2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -231,7 +231,7 @@ section {
 }
 
 .trainer {
-    margin: 20;
+    margin: 20px;
     background: #024e76;
     color: #fce138;
     flex: 1;
